--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "bluebird": "^3.5.1",
     "create-error-class": "^3.0.2",
     "debug": "^3.0.0",
-    "got": "^8.0.0",
     "linear-promise-backoff-queue": "^1.0.0",
+    "node-fetch": "^2.1.2",
     "plug-login": "^1.2.0",
     "plug-message-split": "^1.0.0",
     "plug-socket": "^0.6.0"
